--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>WElcome to Hullistic.</title>
+  <title>Hullistic.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -88,7 +88,7 @@
         <div class="col-xl-6 col-lg-8">
           <h1>Hullistic<span>.</span></h1>
           <!-- <h2>Community&emsp;|&emsp;Quality&emsp;|&emsp;Efficiency</h2> -->
-          <h2>Quality technology solutions that everyone can afford</h2>
+          <h2>Quality technology solutions that everyone can afford.</h2>
         </div>
       </div>
 
@@ -136,18 +136,17 @@
             <h3>About us</h3>
             <p class="fst-italic">
               
-              We believe that systems and communities alike work better when they work together. The name Hullistic is a
-              combination of our founders last name and the word "holistic", meaning the concern with the complete system versus emphasising the individual.
+              The members of the Hullistic community believe that success is the result of being committed to excellence in all areas of life. The name Hullistic is a
+              combination of our founder's last name and the word "holistic", which means the parts of a whole are in intimate interconnection, such that they cannot exist independently.
               Our 3 pillars:
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Diligence: Doing what is right, all of the time, to the best of our ability.</li>
-              <li><i class="ri-check-double-line"></i> Service: We provide services that bring businesses value at an affordable cost.</li>
-              <li><i class="ri-check-double-line"></i> Community: We seek to build long-lasting relationships with our partners.</li>
+              <li><i class="ri-check-double-line"></i> Diligence: We believe in doing what is right 100% of the time.</li>
+              <li><i class="ri-check-double-line"></i> Service: We believe in serving those in our community.</li>
+              <li><i class="ri-check-double-line"></i> Collaboration: We believe that systems and communities alike work better when they work together.</li>
             </ul>
             <p>
-              ❝ Hullistic was created to bridge the gap between technology services and small businesses. There are many consulting firms out there,
-              but none of which provide technology solutions for smaller organizations at an affordable cost. Hullistic is here to fix that. ❞
+              ❝ Small businesses shouldn't have to pay outrages prices to recieve quality technology services. We create solutions that make our customers more efficient and more profitable. ❞
               <br><br>&emsp;&emsp; - Steven Hullander, Founder and CEO
             </p>
           </div>
@@ -303,25 +302,30 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <a href="">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
+              <h4>Lorem Ipsum</h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
+          </a>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <a href="">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
+            <h4>Sed ut perspiciatis</h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
+            </a>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+            <a href="">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
+              <h4>Magni Dolores</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
@@ -545,7 +549,7 @@
 
         <div class="text-center">
           <h3>First Things First</h3>
-          <p> The first step in becoming a Hullistic partner is connecting with us,<br>so we can find out more about your organization and how we can fit into it.</p>
+          <p>It's essential for us to get to know you, so that we can develop solutions that will maximize<br>efficiency and profitability for your organization. Contact us today to get started!</p>
           <a class="cta-btn" href="#contact">Contact Us</a>
         </div>
 
@@ -667,13 +671,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info.hullistic@gmail.com</p>
+                <a href="mailto:info.hullistic@gmail.com"> <p>info.hullistic@gmail.com</p></a>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 423 486 2114</p>
+                <a href="tel:4234862114"> <p>+1 423 486 2114</p></a>
               </div>
 
             </div>
@@ -724,17 +728,17 @@
             <div class="footer-info">
               <h3>H<span>.</span></h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Fairfax County, VA<br>
+                United States of America<br><br>
+                <strong>Phone:</strong><a href="tel:4234862114"> +1 423 486 2114</a><br> 
+                <strong>Email:</strong><a href="mailto:info.hullistic@gmail.com"> info.hullistic@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> 
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -743,10 +747,10 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#tos">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#privacy">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -761,14 +765,14 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
