--- a/index.html
+++ b/index.html
@@ -94,28 +94,36 @@
 
       <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
         <div class="col-xl-2 col-md-4">
+          <a href="#about">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">About Us</a></h3>
+            <h3>About Us</h3>
           </div>
+        </a>
         </div>
         <div class="col-xl-2 col-md-4">
+          <a href="#services">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Services</a></h3>
+            <h3>Services</h3>
           </div>
+          </a>
         </div>
         <div class="col-xl-2 col-md-4">
+          <a href="#team">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Our Team</a></h3>
+            <h3>Our Team</h3>
           </div>
+          </a>
         </div>
         <div class="col-xl-2 col-md-4">
+          <a href="#contact">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Contact Us</a></h3>
+            <h3>Contact Us</h3>
           </div>
+        </a>
         </div>
 
 
@@ -146,7 +154,7 @@
               <li><i class="ri-check-double-line"></i> Collaboration: We believe that systems and communities alike work better when they work together.</li>
             </ul>
             <p>
-              ❝ Small businesses shouldn't have to pay outrages prices to recieve quality technology services. We create solutions that make our customers more efficient and more profitable. ❞
+              ❝ Small businesses shouldn't have to pay outrages prices to recieve quality technology services. We create affordable solutions that make our customers more efficient and more profitable. ❞
               <br><br>&emsp;&emsp; - Steven Hullander, Founder and CEO
             </p>
           </div>
@@ -304,8 +312,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <a href="">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4>Lorem Ipsum</h4>
+              <div class="icon"><i class="bi bi-shield-lock"></i></div>
+              <h4>Cybersecurity<br>Assessments</h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </a>
@@ -314,8 +322,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <a href="">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-            <h4>Sed ut perspiciatis</h4>
+              <div class="icon"><i class="bx bx-globe"></i></div>
+            <h4>Software/Website Development</h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
             </a>
@@ -325,7 +333,7 @@
             <a href="">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4>Magni Dolores</h4>
+              <h4>Business Process<br>Automation (BPA)</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
@@ -729,7 +737,7 @@
               <h3>H<span>.</span></h3>
               <p>
                 Fairfax County, VA<br>
-                United States of America<br><br>
+                <!-- United States of America <br>--><br>
                 <strong>Phone:</strong><a href="tel:4234862114"> +1 423 486 2114</a><br> 
                 <strong>Email:</strong><a href="mailto:info.hullistic@gmail.com"> info.hullistic@gmail.com</a><br>
               </p>
@@ -749,19 +757,19 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#tos">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#privacy">Privacy policy</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#tos">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#privacy">Privacy policy</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Cybersecurity Assessments</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Software/Website Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Business Process Automation (BPA)</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
