--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About us</h3>
             <p class="fst-italic">
-              
+
               The members of the Hullistic community believe that success is the result of being committed to excellence in all areas of life. The name Hullistic is a
               combination of our founder's last name and the word "holistic", which means the parts of a whole are in intimate interconnection, such that they cannot exist independently.
               Our 3 pillars:
@@ -157,6 +157,7 @@
               ❝ Small businesses shouldn't have to pay outrages prices to recieve quality technology services. We create affordable solutions that make our customers more efficient and more profitable. ❞
               <br><br>&emsp;&emsp; - Steven Hullander, Founder and CEO
             </p>
+
           </div>
         </div>
 
@@ -594,10 +595,10 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/zach.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -606,13 +607,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Zach Phillips</h4>
+                <span>Solutions Expert</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+        <!--   <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -710,7 +711,7 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="form-group mt-3">
-                
+
               </div>
               <div class="text-center email button"><button type="submit">Send Message</button></div>
             </form>
@@ -738,11 +739,11 @@
               <p>
                 Fairfax County, VA<br>
                 <!-- United States of America <br>--><br>
-                <strong>Phone:</strong><a href="tel:4234862114"> +1 423 486 2114</a><br> 
+                <strong>Phone:</strong><a href="tel:4234862114"> +1 423 486 2114</a><br>
                 <strong>Email:</strong><a href="mailto:info.hullistic@gmail.com"> info.hullistic@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
-                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> 
+                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
