--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href="">
+            <a href="cybersecurity-services.html">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-shield-lock"></i></div>
               <h4>Cybersecurity<br>Assessments</h4>
@@ -766,7 +766,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cybersecurity Assessments</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity-services.html">Cybersecurity Assessments</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Software/Website Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Business Process Automation (BPA)</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
