everything but testimonials

--- a/services-cybersecurity.html
+++ b/services-cybersecurity.html
@@ -75,7 +75,7 @@
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
-    <a href="index.html#services" class="get-started-btn scrollto">Back</a>
+    <a href="index.html#services" class="get-started-btn scrollto">Services</a>
 
   </div>
 </header><!-- End Header -->
@@ -113,7 +113,7 @@
             <h3>Get Ahead of the Attack</h3>
             <p class="fst-italic">
               "It won't happen to us.. " and "Why would an attacker target me?" are two things that we hear the most from small businessess.
-              However, according to IBM, in 2020, cyber incidents cost an average of $7.68 million per incident for small businesses
+              However, according to IBM, in 2021, cyber incidents cost an average of <a href="https://www.ibm.com/security/data-breach">$3 million</a> per incident for small businesses
               (500 employees or less). Of those incidents, roughly half of small businesses were unable to recover from such a loss.
             </p>
             <p>
@@ -124,10 +124,10 @@
               <li><i class="ri-check-double-line"></i> Education: Our team specializes in teaching non-technical people the ends and out of cybersecurity and the role they play in protecting your organization from cyber attacks.</li>
               <li><i class="ri-check-double-line"></i> Phishing Campaign: All security experts know that people are the number one vulnerability when in comes to cyber attacks. Our team uses OSINT and HUMINT to develop highly sophisticated emails
                 that will lure your team into exposing your network from the inside out. </li>
-              <li><i class="ri-check-double-line"></i> Vulnerability Assessments: We perform a systematic review of security weaknesses on your network to find the holes before attackers do. This includes wired and wireless vulnerability scanning, analysis, verification, and reporting.</li>
+              <li><i class="ri-check-double-line"></i> Vulnerability Assessments: We perform a systematic review of security weaknesses in your network to find the holes before attackers do. This includes wired and wireless vulnerability scanning, analysis, verification, and reporting.</li>
             </ul>
             <p>
-             Don't see what you're looking for? Have a look at our <a href="index.html#services">services section</a>, or <a href="index.html#contact">contact us</a> today to let us know how we can assist your needs.
+             Don't see what you're looking for? Have a look at our <a href="index.html#services">services section</a> or <a href="index.html#contact">contact us</a> today to let us know how we can assist your needs.
             </p>
 
           </div>
@@ -178,9 +178,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cybersecurity Assessments</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Software/Website Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Business Process Automation (BPA)</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-bpa.html">Business Process Automation (BPA)</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-development.html">Software & Website Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-cybersecurity.html">Cybersecurity Assessments</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
