--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
+                <h3>Steven Hullander</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  I am dedicated to bringing our clients the absolute best solutions 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -310,37 +310,38 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <a href="cybersecurity-services.html">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-shield-lock"></i></div>
-              <h4>Cybersecurity<br>Assessments</h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <a href="">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-globe"></i></div>
-            <h4>Software/Website Development</h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            </div>
-            </a>
-          </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-            <a href="">
+            <a href="services-bpa.html">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4>Business Process<br>Automation (BPA)</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <a href="services-development.html">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-globe"></i></div>
+            <h4>Software & Website Development</h4>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <a href="services-cybersecurity.html">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-shield-lock"></i></div>
+              <h4>Cybersecurity<br>Assessments</h4>
+              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+            </a>
           </div>
 
         </div>
-
       </div>
     </section>
     <!-- End Services Section -->
@@ -557,8 +558,8 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>First Things First</h3>
-          <p>It's essential for us to get to know you, so that we can develop solutions that will maximize<br>efficiency and profitability for your organization. Contact us today to get started!</p>
+          <h3>Don't see what you're looking for?</h3>
+          <p>It's essential for us to get to know you, so that we can develop solutions that fit your needs. <br>Contact us today and let us know how we can better assist you.</p>
           <a class="cta-btn" href="#contact">Contact Us</a>
         </div>
 
@@ -582,10 +583,10 @@
               <div class="member-img">
                 <img src="assets/img/team/steve.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href="https://www.linkedin.com/in/steven-hullander-26615a127/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -766,9 +767,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity-services.html">Cybersecurity Assessments</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Software/Website Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Business Process Automation (BPA)</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-bpa.html">Business Process Automation (BPA)</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-development.html">Software & Website Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-cybersecurity.html">Cybersecurity Assessments</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
