service card updates

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4>Business Process<br>Automation (BPA)</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>Interested in finding ways to make your organization function more efficiently? We can help.</p>
             </div>
             </a>
           </div>
@@ -326,7 +326,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-globe"></i></div>
             <h4>Software & Website Development</h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>Looking to build an application or a website for your organization? This is the place for you.</p>
             </div>
             </a>
           </div>
@@ -336,7 +336,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-shield-lock"></i></div>
               <h4>Cybersecurity<br>Assessments</h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>Security is important for all organizations. Let us find the weaknesses in your network before attackers do.</p>
             </div>
             </a>
           </div>
@@ -586,7 +586,7 @@
                   <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/steven-hullander-26615a127/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -601,10 +601,10 @@
               <div class="member-img">
                 <img src="assets/img/team/zach.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href="https://www.linkedin.com/in/zacheryphillips/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
