--- a/services-cybersecurity.html
+++ b/services-cybersecurity.html
@@ -96,7 +96,7 @@
             <li>Cybersecurity Assessments</li>
           </ol>
         </div>
-        
+
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -117,7 +117,7 @@
               (500 employees or less). Of those incidents, roughly half of small businesses were unable to recover from such a loss.
             </p>
             <p>
-              We don't want you to become a part of that statistic. Let us find your weaknesses in your organization before hackers do. 
+              We don't want you to become a part of that statistic. Let us find your weaknesses in your organization before attackers do.
               Here's what we offer:
             </p>
             <ul>
