--- a/services-cybersecurity.html
+++ b/services-cybersecurity.html
@@ -103,13 +103,13 @@
 
     <!-- ======= Cyber Section ======= -->
     <section id="cyber" class="servicedetail">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-6 order-1 order-lg-2" >
             <img src="assets/img/cyber.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" >
             <h3>Get Ahead of the Attack</h3>
             <p class="fst-italic">
               "It won't happen to us.. " and "Why would an attacker target me?" are two things that we hear the most from small businessess.
@@ -179,7 +179,7 @@
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="services-bpa.html">Business Process Automation (BPA)</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services-development.html">Software & Website Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services-development.html">Software &amp; Website Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-cybersecurity.html">Cybersecurity Assessments</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
@@ -203,13 +203,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Hullistic</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+
     </div>
   </footer><!-- End Footer -->
 
