--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
               <li><i class="ri-check-double-line"></i> Collaboration: We believe that systems and communities alike work better when they work together.</li>
             </ul>
             <p class="fst-italic">
-
-              The members of the Hullistic community believe that success is the result of being committed to excellence in all areas of life. The name Hullistic is a
-              combination of our founder's last name and the word "holistic", which means the parts of a whole are in intimate interconnection, such that they cannot exist independently.
+              We are normal people who just happen to understand computers and want to make a difference in the community. Our goal is to satisfy your needs in such
+               a way that you won't hesitate to call us in the future or refer us to your friends. We look forward to meeting you!
             </p>
 
           </div>
